Fix z-index

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,7 +2,7 @@
 
 .header {
   position: sticky;
-  z-index: 200;
+  z-index: 9999999999;
   top: 0;
   transition: top 0.2s ease-in-out;
   box-sizing: border-box;
